--- a/package.json
+++ b/package.json
@@ -20,5 +20,14 @@
   "bugs": {
     "url": "https://github.com/NewEvolution/projector-app/issues"
   },
-  "homepage": "https://github.com/NewEvolution/projector-app#readme"
+  "homepage": "https://github.com/NewEvolution/projector-app#readme",
+  "dependencies": {
+    "bower": "^1.7.9",
+    "cheerio": "^0.22.0",
+    "express": "^4.14.0",
+    "node-sass-middleware": "^0.9.8",
+    "pug": "^2.0.0-beta5",
+    "request": "^2.74.0",
+    "serve-favicon": "^2.3.0"
+  }
 }
