--- a/package.json
+++ b/package.json
@@ -10,6 +10,13 @@
     "type": "git",
     "url": "git+https://github.com/NewEvolution/projector-app.git"
   },
+  "eslintConfig": {
+    "env": {
+      "node": true,
+      "es6": true
+    },
+    "extends": "/Users/ryan/.eslint/personal.json"
+  },
   "keywords": [
     "node",
     "projector",
