Added click handling for downloads on buttons

--- a/package.json
+++ b/package.json
@@ -15,6 +15,10 @@
       "node": true,
       "es6": true
     },
+    "globals": {
+      "document": true,
+      "window": true
+    },
     "extends": "/Users/ryan/.eslint/personal.json"
   },
   "keywords": [
