--- a/package.json
+++ b/package.json
@@ -38,7 +38,6 @@
     "express": "^4.14.0",
     "node-sass-middleware": "^0.9.8",
     "pug": "^2.0.0-beta5",
-    "request": "^2.74.0",
-    "serve-favicon": "^2.3.0"
+    "request": "^2.74.0"
   }
 }
